--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="CSS/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -197,7 +197,7 @@
 	</div>
 
 </div>
-<script src="JS/app.js" ></script>
+<script src="./js/app.js" ></script>
 </body>
 </html>
 
